# some-templated-containers

./: .gitignore  CMakeLists.txt  README.md
examples/: benchmark.hpp  eager_singleton_example.cpp  enum_operators_example.cpp  explicit_singleton_example.cpp  inferred_state_machine_example.cpp  lazy_singleton_example.cpp  swap_back_array_example.cpp
include/: swap_back_array.h
include/stc/: concepts_and_traits.h  eager_singleton.h  enum_operators.h  explicit_singleton.h  inferred_state_machine.h  integers.h  lazy_singleton.h  swap_back_array.h  type_set.h
include/stc/utils/: define_macros.h
include/stc_utils/: undefine_macros.h
src/: enum_operators.inl  swap_back_array.inl
tests/: enum_operators_tests.cpp  main.cpp  singletons_tests.cpp  swap_back_array_tests.cpp  swap_back_array_tests.hpp  test_element.h  tests_framework.h
